# cmake-example

./: .clang-format  CMakeLists.txt  README.md  config.h.in
cmake/: CompileOptions.cmake  CompileOptions.cmake.copy
extensions/: CMakeLists.txt  functions.cmake
extensions/console/: main.cpp  test
include/: config.h
include/common/: linked_list.hpp
include/game/character/: character.hpp  elf.hpp  human.hpp  orc.hpp
include/game/item/: item.hpp
include/game/shop/: shop.hpp
include/menu/: menu_base.hpp
include/menu/sub_menu/: for_main.hpp  login_menu.hpp  register_menu.hpp
src/: CMakeLists.txt
src/common/: linked_list.cpp
src/game/character/: character.cpp  elf.cpp  human.cpp  orc.cpp
src/game/item/: item.cpp
src/game/shop/: shop.cpp
src/menu/: main_menu.hpp  play_menu.hpp
src/menu/sub_menu/: menu_item.hpp
